@@ -1,6 +1,7 @@
 (2012/04/11) - v1.5
 - Added: Added support for [SP++], [SP], and [--SP] as alternatives
   to POP, PEEK, and PUSH.
+- Added: .INCBIN directive.
 
 (2012/04/10) - v1.4
 - Added: Support for negative integer literals.
